fix logo wrapping issue

--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -35,8 +35,11 @@
   .menu {
     display: none;
   }
-}
-@media screen and (min-width: 1200px) {
+  .header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   .logoLarge {
     display: block;
   }
@@ -44,3 +47,6 @@
     display: none;
   }
 }
+/* @media screen and (min-width: 1200px) {
+  
+} */
